--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=sports_news
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -25,12 +25,12 @@ REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_PORT=587
+MAIL_USERNAME=48ddc52227d6dc
+MAIL_PASSWORD=d966e71d277e6d
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=no-reply@gmail.com
+MAIL_FROM_NAME="Sport News Reset Password"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
