--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,7 @@
         },
         "classmap": [
             "database/seeds",
-            "database/factories",
-            "app/Models"
+            "database/factories"
         ]
     },
     "autoload-dev": {
