--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.1",
-        "mews/purifier": "^3.1"
+        "mews/purifier": "^3.1",
+      "ext-gd": "*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
