--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "ext-gd": "*",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.1",
         "mews/purifier": "^3.1",
-      "ext-gd": "*"
+        "oleics/ac-minimist": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
