--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.1",
-        "mews/purifier": "^3.1",
-        "oleics/ac-minimist": "^1.0"
+        "mews/purifier": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
