--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "ext-gd": "*",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
+        "google/recaptcha": "^1.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
