Registratior - Verification emal

--- a/.env.example
+++ b/.env.example
@@ -24,13 +24,14 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
+MAIL_HOST=
+MAIL_USERNAME=
+MAil_PASSWORD=
 MAIL_PORT=587
-MAIL_USERNAME=48ddc52227d6dc
-MAIL_PASSWORD=d966e71d277e6d
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=no-reply@gmail.com
-MAIL_FROM_NAME="Sport News Reset Password"
+
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME="Noreply SportsNews"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
