--- a/.env.example
+++ b/.env.example
@@ -23,11 +23,11 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
 MAIL_USERNAME=
-MAil_PASSWORD=
-MAIL_PORT=587
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 
 MAIL_FROM_ADDRESS=
@@ -37,6 +37,10 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
+
+MAILCHIMP_DRIVER=api
+MAILCHIMP_APIKEY=
+MAILCHIMP_LIST_ID=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
