--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
-
+MAIL_TO_ADDRESS=
 MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="Noreply SportsNews"
 
